--- a/layouts/partials/head/meta.html
+++ b/layouts/partials/head/meta.html
@@ -6,3 +6,13 @@
 <link rel="canonical" href="{{ .Permalink }}">
 <link rel="robots" href="/robots.txt" />
 <link rel="icon" type="image/x-icon" href="/favicon.ico">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HBYQHT9BQG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HBYQHT9BQG');
+</script>
